@@ -1,36 +1,34 @@
 package com.tambo.tambo_delivery_backend.mapper;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 
-import com.tambo.tambo_delivery_backend.dto.CategoryDTO;
-import com.tambo.tambo_delivery_backend.dto.CategoryRequestDTO;
-import com.tambo.tambo_delivery_backend.dto.CategoryTypeDTO;
+import com.tambo.tambo_delivery_backend.dto.request.CategoryRequestDTO;
+import com.tambo.tambo_delivery_backend.dto.response.CategoryDTO;
+import com.tambo.tambo_delivery_backend.dto.response.CategoryTypeDTO;
 import com.tambo.tambo_delivery_backend.entities.Category;
 import com.tambo.tambo_delivery_backend.entities.CategoryType;
+import com.tambo.tambo_delivery_backend.repositories.CategoryTypeRepository;
 
 @Component
 public class CategoryMapper {
 
-    public static Category toEntity(CategoryRequestDTO dto) {
+    public static Category toEntity(CategoryRequestDTO dto, CategoryTypeRepository categoryTypeRepository) {
         Category category = new Category();
         category.setName(dto.getName());
-        category.setCode(dto.getCode());
+        category.setImageUrl(dto.getImageUrl());
         category.setDescription(dto.getDescription());
 
-        List<CategoryType> types = dto.getCategoryTypes().stream()
-                .map(typeDTO -> {
-                    CategoryType type = new CategoryType();
-                    type.setName(typeDTO.getName());
-                    type.setCode(typeDTO.getCode());
-                    type.setDescription(typeDTO.getDescription());
-                    type.setCategory(category);
-                    return type;
-                })
-                .toList();
+        // Mapear los tipos de categoría si existen (ahora son IDs, no objetos
+        // completos)
+        if (dto.getCategoryTypeIds() != null && !dto.getCategoryTypeIds().isEmpty()) {
+            List<CategoryType> types = categoryTypeRepository.findAllById(dto.getCategoryTypeIds());
+            category.setCategoryTypes(types);
+        }
 
-        category.setCategoryTypes(types);
         return category;
     }
 
@@ -38,16 +36,18 @@ public class CategoryMapper {
         return CategoryDTO.builder()
                 .id(category.getId())
                 .name(category.getName())
-                .code(category.getCode())
+                .imageUrl(category.getImageUrl())
                 .description(category.getDescription())
-                .categoryTypes(category.getCategoryTypes().stream()
-                        .map(type -> CategoryTypeDTO.builder()
-                                .id(type.getId())
-                                .name(type.getName())
-                                .code(type.getCode())
-                                .description(type.getDescription())
-                                .build())
-                        .toList())
+                .categoryTypes(
+                        category.getCategoryTypes() != null
+                                ? category.getCategoryTypes().stream()
+                                        .map(type -> CategoryTypeDTO.builder()
+                                                .id(type.getId())
+                                                .name(type.getName())
+                                                .description(type.getDescription())
+                                                .build())
+                                        .collect(Collectors.toList())
+                                : Collections.emptyList())
                 .build();
     }
 
